# CSCI_366_Programming_Assignments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  player_1.setup_board.txt  player_2.setup_board.txt
src/: BitArray2D.asm  BitArray2D.cpp  BitArray2D.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  client_main.cpp  common.hpp  server_main.cpp
test/: CMakeLists.txt  MockSocket.hpp  correct_fire_message.json  correct_hit_action_board.json  correct_miss_action_board.json  correct_miss_result.json  correct_start_action_board.json  tests.cpp
